[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance-probe"
version = "0.1.0"
description = "Standalone byte-level and geometry probe for Resonance waveform models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.0",
]

[project.scripts]
resonance-probe = "resonance_probe.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["resonance_probe*"]
